--- a/public/css/app.css
+++ b/public/css/app.css
@@ -539,6 +539,9 @@ video {
 .relative {
   position: relative;
 }
+.sticky {
+  position: sticky;
+}
 .inset-0 {
   inset: 0px;
 }
@@ -562,6 +565,9 @@ video {
 }
 .bottom-4 {
   bottom: 1rem;
+}
+.bottom-8 {
+  bottom: 2rem;
 }
 .bottom-\[14\%\] {
   bottom: 14%;
@@ -611,6 +617,9 @@ video {
 .right-4 {
   right: 1rem;
 }
+.right-8 {
+  right: 2rem;
+}
 .right-\[14\%\] {
   right: 14%;
 }
@@ -629,6 +638,9 @@ video {
 .top-3 {
   top: 0.75rem;
 }
+.top-4 {
+  top: 1rem;
+}
 .top-\[14\%\] {
   top: 14%;
 }
@@ -643,6 +655,9 @@ video {
 }
 .z-20 {
   z-index: 20;
+}
+.z-40 {
+  z-index: 40;
 }
 .z-50 {
   z-index: 50;
@@ -668,9 +683,21 @@ video {
 .m-4 {
   margin: 1rem;
 }
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+.mx-3\.5 {
+  margin-left: 0.875rem;
+  margin-right: 0.875rem;
 }
 .mx-4 {
   margin-left: 1rem;
@@ -684,6 +711,14 @@ video {
   margin-left: 1px;
   margin-right: 1px;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 .-ml-1 {
   margin-left: -0.25rem;
 }
@@ -693,6 +728,15 @@ video {
 .-ml-2\.5 {
   margin-left: -0.625rem;
 }
+.-mt-0 {
+  margin-top: -0px;
+}
+.-mt-0\.5 {
+  margin-top: -0.125rem;
+}
+.-mt-4 {
+  margin-top: -1rem;
+}
 .-mt-6 {
   margin-top: -1.5rem;
 }
@@ -701,6 +745,15 @@ video {
 }
 .mb-0 {
   margin-bottom: 0px;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -713,6 +766,9 @@ video {
 }
 .ml-1 {
   margin-left: 0.25rem;
+}
+.ml-1\.5 {
+  margin-left: 0.375rem;
 }
 .ml-12 {
   margin-left: 3rem;
@@ -735,6 +791,9 @@ video {
 .ml-auto {
   margin-left: auto;
 }
+.mr-1 {
+  margin-right: 0.25rem;
+}
 .mr-12 {
   margin-right: 3rem;
 }
@@ -747,8 +806,20 @@ video {
 .mr-5 {
   margin-right: 1.25rem;
 }
+.mr-auto {
+  margin-right: auto;
+}
+.mt-0 {
+  margin-top: 0px;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
+}
+.mt-3 {
+  margin-top: 0.75rem;
 }
 .mt-4 {
   margin-top: 1rem;
@@ -761,6 +832,15 @@ video {
 }
 .mt-px {
   margin-top: 1px;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mt-12 {
+  margin-top: 3rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -776,6 +856,9 @@ video {
 }
 .inline-flex {
   display: inline-flex;
+}
+.table {
+  display: table;
 }
 .grid {
   display: grid;
@@ -843,11 +926,17 @@ video {
 .h-\[110px\] {
   height: 110px;
 }
+.h-\[18px\] {
+  height: 18px;
+}
 .h-\[58px\] {
   height: 58px;
 }
 .h-\[74px\] {
   height: 74px;
+}
+.h-\[calc\(100vh-32px\)\] {
+  height: calc(100vh - 32px);
 }
 .h-full {
   height: 100%;
@@ -858,6 +947,9 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.\!h-5 {
+  height: 1.25rem !important;
 }
 .max-h-96 {
   max-height: 24rem;
@@ -910,6 +1002,9 @@ video {
 .w-12 {
   width: 3rem;
 }
+.w-16 {
+  width: 4rem;
+}
 .w-2\/5 {
   width: 40%;
 }
@@ -937,14 +1032,23 @@ video {
 .w-7 {
   width: 1.75rem;
 }
+.w-72 {
+  width: 18rem;
+}
 .w-8 {
   width: 2rem;
 }
 .w-9 {
   width: 2.25rem;
 }
+.w-96 {
+  width: 24rem;
+}
 .w-\[110px\] {
   width: 110px;
+}
+.w-\[18px\] {
+  width: 18px;
 }
 .w-\[58px\] {
   width: 58px;
@@ -964,6 +1068,12 @@ video {
 }
 .w-screen {
   width: 100vw;
+}
+.\!w-5 {
+  width: 1.25rem !important;
+}
+.w-10\/12 {
+  width: 83.333333%;
 }
 .min-w-\[100vw\] {
   min-width: 100vw;
@@ -1000,6 +1110,9 @@ video {
 }
 .min-w-\[75\%\] {
   min-width: 75%;
+}
+.min-w-\[640px\] {
+  min-width: 640px;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -1055,12 +1168,19 @@ video {
 .basis-full {
   flex-basis: 100%;
 }
+.table-auto {
+  table-layout: auto;
+}
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .-translate-x-2\/4 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-80 {
+  --tw-translate-x: -20rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .-translate-y-1\/2 {
@@ -1075,8 +1195,16 @@ video {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.translate-x-0 {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .translate-x-2\/4 {
   --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-96 {
+  --tw-translate-x: 24rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .translate-y-2\/4 {
@@ -1156,11 +1284,17 @@ video {
 .flex-col {
   flex-direction: column;
 }
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
 .flex-wrap {
   flex-wrap: wrap;
 }
 .place-items-center {
   place-items: center;
+}
+.items-start {
+  align-items: flex-start;
 }
 .items-center {
   align-items: center;
@@ -1180,8 +1314,27 @@ video {
 .gap-2 {
   gap: 0.5rem;
 }
+.gap-3 {
+  gap: 0.75rem;
+}
 .gap-4 {
   gap: 1rem;
+}
+.gap-6 {
+  gap: 1.5rem;
+}
+.gap-12 {
+  gap: 3rem;
+}
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+.gap-y-12 {
+  row-gap: 3rem;
 }
 .divide-x > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-x-reverse: 0;
@@ -1280,6 +1433,9 @@ video {
 .overflow-x-hidden {
   overflow-x: hidden;
 }
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
 .whitespace-normal {
   white-space: normal;
 }
@@ -1333,6 +1489,12 @@ video {
 .rounded-r-none {
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
+}
+.rounded-br-none {
+  border-bottom-right-radius: 0px;
+}
+.rounded-tl-none {
+  border-top-left-radius: 0px;
 }
 .border {
   border-width: 1px;
@@ -1453,9 +1615,15 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(0 150 136 / var(--tw-border-opacity));
 }
+.border-transparent {
+  border-color: transparent;
+}
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-white\/20 {
+  border-color: rgb(255 255 255 / 0.2);
 }
 .border-white\/80 {
   border-color: rgb(255 255 255 / 0.8);
@@ -1547,6 +1715,10 @@ video {
 .bg-blue-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 71 79 / var(--tw-bg-opacity));
+}
+.bg-blue-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 50 56 / var(--tw-bg-opacity));
 }
 .bg-brown-500 {
   --tw-bg-opacity: 1;
@@ -1798,12 +1970,20 @@ video {
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
 }
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 .from-amber-600 {
   --tw-gradient-from: #ffb300 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 179 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-blue-400 {
+  --tw-gradient-from: #42a5f5 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(66 165 245 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .from-blue-600 {
@@ -1814,6 +1994,11 @@ video {
 .from-blue-gray-600 {
   --tw-gradient-from: #546e7a var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(84 110 122 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-blue-gray-800 {
+  --tw-gradient-from: #37474f var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(55 71 79 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .from-brown-600 {
@@ -1841,6 +2026,11 @@ video {
   --tw-gradient-to: rgb(117 117 117 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.from-green-400 {
+  --tw-gradient-from: #66bb6a var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(102 187 106 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
 .from-green-600 {
   --tw-gradient-from: #43a047 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(67 160 71 / 0) var(--tw-gradient-to-position);
@@ -1866,9 +2056,19 @@ video {
   --tw-gradient-to: rgb(192 202 51 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.from-orange-400 {
+  --tw-gradient-from: #ffa726 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 167 38 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
 .from-orange-600 {
   --tw-gradient-from: #fb8c00 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(251 140 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-pink-400 {
+  --tw-gradient-from: #ec407a var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(236 64 122 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .from-pink-600 {
@@ -1879,6 +2079,11 @@ video {
 .from-purple-600 {
   --tw-gradient-from: #8e24aa var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(142 36 170 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-red-400 {
+  --tw-gradient-from: #ef5350 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(239 83 80 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .from-red-600 {
@@ -1902,8 +2107,14 @@ video {
 .to-blue-400 {
   --tw-gradient-to: #42a5f5 var(--tw-gradient-to-position);
 }
+.to-blue-600 {
+  --tw-gradient-to: #1e88e5 var(--tw-gradient-to-position);
+}
 .to-blue-gray-400 {
   --tw-gradient-to: #78909c var(--tw-gradient-to-position);
+}
+.to-blue-gray-900 {
+  --tw-gradient-to: #263238 var(--tw-gradient-to-position);
 }
 .to-brown-400 {
   --tw-gradient-to: #8d6e63 var(--tw-gradient-to-position);
@@ -1923,6 +2134,9 @@ video {
 .to-green-400 {
   --tw-gradient-to: #66bb6a var(--tw-gradient-to-position);
 }
+.to-green-600 {
+  --tw-gradient-to: #43a047 var(--tw-gradient-to-position);
+}
 .to-indigo-400 {
   --tw-gradient-to: #5c6bc0 var(--tw-gradient-to-position);
 }
@@ -1938,14 +2152,23 @@ video {
 .to-orange-400 {
   --tw-gradient-to: #ffa726 var(--tw-gradient-to-position);
 }
+.to-orange-600 {
+  --tw-gradient-to: #fb8c00 var(--tw-gradient-to-position);
+}
 .to-pink-400 {
   --tw-gradient-to: #ec407a var(--tw-gradient-to-position);
+}
+.to-pink-600 {
+  --tw-gradient-to: #d81b60 var(--tw-gradient-to-position);
 }
 .to-purple-400 {
   --tw-gradient-to: #ab47bc var(--tw-gradient-to-position);
 }
 .to-red-400 {
   --tw-gradient-to: #ef5350 var(--tw-gradient-to-position);
+}
+.to-red-600 {
+  --tw-gradient-to: #e53935 var(--tw-gradient-to-position);
 }
 .to-teal-400 {
   --tw-gradient-to: #26a69a var(--tw-gradient-to-position);
@@ -1995,6 +2218,10 @@ video {
 .p-6 {
   padding: 1.5rem;
 }
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -2002,6 +2229,10 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 .px-3 {
   padding-left: 0.75rem;
@@ -2026,6 +2257,14 @@ video {
 .px-px {
   padding-left: 1px;
   padding-right: 1px;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 .py-1 {
   padding-top: 0.25rem;
@@ -2055,6 +2294,18 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .\!pr-7 {
   padding-right: 1.75rem !important;
 }
@@ -2069,6 +2320,9 @@ video {
 }
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 .pt-0 {
   padding-top: 0px;
@@ -2099,6 +2353,9 @@ video {
 }
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .text-start {
   text-align: start;
@@ -2151,6 +2408,9 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.font-black {
+  font-weight: 900;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -2168,6 +2428,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.capitalize {
+  text-transform: capitalize;
 }
 .\!leading-tight {
   line-height: 1.25 !important;
@@ -2255,6 +2518,10 @@ video {
 .text-blue-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(96 125 139 / var(--tw-text-opacity));
+}
+.text-blue-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(84 110 122 / var(--tw-text-opacity));
 }
 .text-blue-gray-700 {
   --tw-text-opacity: 1;
@@ -2501,6 +2768,12 @@ video {
 .opacity-50 {
   opacity: 0.5;
 }
+.opacity-60 {
+  opacity: 0.6;
+}
+.opacity-75 {
+  opacity: 0.75;
+}
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -2550,8 +2823,16 @@ video {
   --tw-shadow-color: rgb(96 125 139 / 0.2);
   --tw-shadow: var(--tw-shadow-colored);
 }
+.shadow-blue-gray-500\/25 {
+  --tw-shadow-color: rgb(96 125 139 / 0.25);
+  --tw-shadow: var(--tw-shadow-colored);
+}
 .shadow-blue-gray-500\/40 {
   --tw-shadow-color: rgb(96 125 139 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-blue-gray-500\/5 {
+  --tw-shadow-color: rgb(96 125 139 / 0.05);
   --tw-shadow: var(--tw-shadow-colored);
 }
 .shadow-blue-gray-900\/10 {
@@ -3053,6 +3334,14 @@ video {
   content: var(--tw-content);
   bottom: -0.625rem;
 }
+.after\:-bottom-6::after {
+  content: var(--tw-content);
+  bottom: -1.5rem;
+}
+.after\:left-2\/4::after {
+  content: var(--tw-content);
+  left: 50%;
+}
 .after\:ml-1::after {
   content: var(--tw-content);
   margin-left: 0.25rem;
@@ -3077,6 +3366,14 @@ video {
   content: var(--tw-content);
   height: 0.375rem;
 }
+.after\:h-0::after {
+  content: var(--tw-content);
+  height: 0px;
+}
+.after\:h-4\/6::after {
+  content: var(--tw-content);
+  height: 66.666667%;
+}
 .after\:w-2::after {
   content: var(--tw-content);
   width: 0.5rem;
@@ -3089,9 +3386,22 @@ video {
   content: var(--tw-content);
   width: 100%;
 }
+.after\:w-0::after {
+  content: var(--tw-content);
+  width: 0px;
+}
+.after\:w-0\.5::after {
+  content: var(--tw-content);
+  width: 0.125rem;
+}
 .after\:flex-grow::after {
   content: var(--tw-content);
   flex-grow: 1;
+}
+.after\:-translate-x-2\/4::after {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .after\:scale-x-0::after {
   content: var(--tw-content);
@@ -3259,6 +3569,11 @@ video {
   content: var(--tw-content);
   border-top-color: transparent;
 }
+.after\:bg-blue-gray-50::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 239 241 / var(--tw-bg-opacity));
+}
 .after\:transition-all::after {
   content: var(--tw-content);
   transition-property: all;
@@ -3274,6 +3589,10 @@ video {
 .after\:duration-300::after {
   content: var(--tw-content);
   transition-duration: 300ms;
+}
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
 }
 .checked\:border-amber-500:checked {
   --tw-border-opacity: 1;
@@ -3580,6 +3899,11 @@ video {
   --tw-text-opacity: 1;
   color: rgb(25 118 210 / var(--tw-text-opacity));
 }
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -3731,6 +4055,10 @@ video {
 .hover\:bg-opacity-80:hover {
   --tw-bg-opacity: 0.8;
 }
+.hover\:text-blue-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(33 150 243 / var(--tw-text-opacity));
+}
 .hover\:text-blue-700:hover {
   --tw-text-opacity: 1;
   color: rgb(25 118 210 / var(--tw-text-opacity));
@@ -3746,6 +4074,9 @@ video {
 .hover\:text-light-blue-500:hover {
   --tw-text-opacity: 1;
   color: rgb(3 169 244 / var(--tw-text-opacity));
+}
+.hover\:opacity-100:hover {
+  opacity: 1;
 }
 .hover\:opacity-75:hover {
   opacity: 0.75;
@@ -4951,8 +5282,28 @@ video {
 }
 @media (min-width: 720px) {
 
+  .md\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .md\:w-56 {
+    width: 14rem;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
   }
 
   .md\:border-l {
@@ -4965,9 +5316,72 @@ video {
 }
 @media (min-width: 960px) {
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:inline-block {
+    display: inline-block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:gap-6 {
+    gap: 1.5rem;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+}
+@media (min-width: 1140px) {
+
+  .xl\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .xl\:ml-80 {
+    margin-left: 20rem;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:translate-x-0 {
+    --tw-translate-x: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 .\[\&\:\:-moz-range-thumb\]\:relative::-moz-range-thumb {
